force-app/main/default/objects/Campaign/fields/Badge_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Badge_Awarded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Badge Awarded</label>
    <type>Checkbox</type>
</CustomField>