force-app/main/default/objects/Campaign/fields/Delete_Flag__c.field-meta.xml
<CustomField>
    <fullName>Delete_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag used to delete campaign.</description>
    <label>Delete Flag</label>
    <type>Checkbox</type>
</CustomField>