force-app/main/default/objects/Campaign/fields/Donation_Created__c.field-meta.xml
<CustomField>
    <fullName>Donation_Created__c</fullName>
    <label>Donation Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>