force-app/main/default/objects/Campaign/fields/Donation_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Donation_Refunded__c</fullName>
    <label>Donation Refunded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>