force-app/main/default/objects/Campaign/fields/External_System_Link__c.field-meta.xml
<CustomField>
    <fullName>External_System_Link__c</fullName>
    <label>External System Link</label>
    <type>Url</type>
</CustomField>