force-app/main/default/objects/Campaign/fields/External_System_Name__c.field-meta.xml
<CustomField>
    <fullName>External_System_Name__c</fullName>
    <label>External System Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>