force-app/main/default/objects/Campaign/fields/Fund_Page_Alert_1_Sent__c.field-meta.xml
<CustomField>
    <fullName>Fund_Page_Alert_1_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not on page layout, ticked via Flow when Total Value of Fundraising Pg alert for 500 - 999 is sent to User</description>
    <label>Fund Page Alert 1 Sent</label>
    <type>Checkbox</type>
</CustomField>