force-app/main/default/objects/Campaign/fields/Fund_Page_Alert_3_Sent__c.field-meta.xml
<CustomField>
    <fullName>Fund_Page_Alert_3_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not on page layout, ticked via Flow when Total Value of Fundraising Pg alert for 3000-4999 is sent to User</description>
    <label>Fund Page Alert 3 Sent</label>
    <type>Checkbox</type>
</CustomField>