force-app/main/default/objects/Campaign/fields/Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fundraiser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Fundraiser)</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>