force-app/main/default/objects/Campaign/fields/Fundraising_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Campaign_Name__c</fullName>
    <description>If Campaign &apos;Type&apos; = Fundraising Page and the &apos;External System Link&apos; field contains &apos;twofeetheartbeat&apos; then this field returns &quot;Two Feet Heartbeat Fundraising Page&quot;</description>
    <formula>IF(
ISPICKVAL(Type, &quot;Fundraising Page&quot;) &amp;&amp;  CONTAINS(External_System_Link__c,&quot;twofeetheartbeat&quot;),
&quot;Two Feet Heartbeat Fundraising Page&quot;,NULL
)</formula>
    <inlineHelpText>If Campaign &apos;Type&apos; = Fundraising Page and the &apos;External System Link&apos; field contains &apos;twofeetheartbeat&apos; then this field returns &quot;Two Feet Heartbeat Fundraising Page&quot;</inlineHelpText>
    <label>Fundraising Campaign Name</label>
    <type>Text</type>
</CustomField>