force-app/main/default/objects/Campaign/fields/Fundraising_Page_Type__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Page_Type__c</fullName>
    <label>Fundraising Page Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organisation</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>