force-app/main/default/objects/Campaign/fields/Fundraising_Team_Page__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Team_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if the fundraising page is a team page. If unchecked, it is an individual fundraising page</description>
    <inlineHelpText>Denotes if the fundraising page is a team page. If unchecked, it is an individual fundraising page</inlineHelpText>
    <label>Fundraising Team Page</label>
    <type>Checkbox</type>
</CustomField>