force-app/main/default/objects/Campaign/fields/Funraisin__Allow_Tables__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Allow_Tables__c</fullName>
    <label>Allow Tables</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>