force-app/main/default/objects/Campaign/fields/Funraisin__Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Campaign_Type__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>event</fullName>
            </value>
            <value>
                <fullName>page</fullName>
            </value>
            <value>
                <fullName>team</fullName>
            </value>
            <value>
                <fullName>raffle</fullName>
            </value>
            <value>
                <fullName>individual</fullName>
            </value>
            <value>
                <fullName>organisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>