force-app/main/default/objects/Campaign/fields/Funraisin__City__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__City__c</fullName>
    <label>City</label>
    <length>150</length>
    <type>Text</type>
</CustomField>