force-app/main/default/objects/Campaign/fields/Funraisin__Country__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Country__c</fullName>
    <label>Country</label>
    <length>150</length>
    <type>Text</type>
</CustomField>