force-app/main/default/objects/Campaign/fields/Funraisin__Created_By_Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Created_By_Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By Fundraiser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>