force-app/main/default/objects/Campaign/fields/Funraisin__Entry_Fee__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Entry_Fee__c</fullName>
    <label>Entry Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>