force-app/main/default/objects/Campaign/fields/Funraisin__Entry_Limit__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Entry_Limit__c</fullName>
    <label>Entry Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>