force-app/main/default/objects/Campaign/fields/Funraisin__Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Entry_Type__c</fullName>
    <label>Entry Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>