force-app/main/default/objects/Campaign/fields/Funraisin__Event_Target__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Event_Target__c</fullName>
    <label>Event Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>