force-app/main/default/objects/Campaign/fields/Funraisin__Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Event_Type__c</fullName>
    <label>Event Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>