force-app/main/default/objects/Campaign/fields/Funraisin__Funraisin_Id__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Funraisin_Id__c</fullName>
    <description>the Funraisin ID for events, teams, pages, etc</description>
    <externalId>true</externalId>
    <label>Funraisin Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>