force-app/main/default/objects/Campaign/fields/Funraisin__Is_Fundraising_Event__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Is_Fundraising_Event__c</fullName>
    <label>Is Fundraising Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>