force-app/main/default/objects/Campaign/fields/Funraisin__Maximum_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Maximum_Tickets__c</fullName>
    <label>Maximum Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>