force-app/main/default/objects/Campaign/fields/Funraisin__Postcode__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Postcode__c</fullName>
    <label>Postcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>