force-app/main/default/objects/Campaign/fields/Funraisin__Seats_Per_Table__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Seats_Per_Table__c</fullName>
    <label>Seats Per Table</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>