force-app/main/default/objects/Campaign/fields/Funraisin__State__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__State__c</fullName>
    <label>State</label>
    <length>150</length>
    <type>Text</type>
</CustomField>