force-app/main/default/objects/Campaign/fields/Funraisin__Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Street_Address__c</fullName>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>