force-app/main/default/objects/Campaign/fields/Funraisin__Table_Price__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Table_Price__c</fullName>
    <label>Table Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>