force-app/main/default/objects/Campaign/fields/Funraisin__Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Ticket_Price__c</fullName>
    <label>Ticket Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>