force-app/main/default/objects/Campaign/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <description>GL code aligned to the budget</description>
    <inlineHelpText>GL code aligned to the budget</inlineHelpText>
    <label>GL Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>