force-app/main/default/objects/Campaign/fields/In_Memory_Name__c.field-meta.xml
<CustomField>
    <fullName>In_Memory_Name__c</fullName>
    <description>Name of the person this page is set up in memory of</description>
    <inlineHelpText>Name of the person this page is set up in memory of</inlineHelpText>
    <label>In Memory Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>