force-app/main/default/objects/Campaign/fields/In_Memory_Of__c.field-meta.xml
<CustomField>
    <fullName>In_Memory_Of__c</fullName>
    <description>Name of deceased this tribute campaign is in memory of</description>
    <label>In Memory Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>