force-app/main/default/objects/Campaign/fields/Is_a_Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Parent_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox useful for workflows/Validation Rules and in reporting</description>
    <label>Is a Parent Campaign</label>
    <type>Checkbox</type>
</CustomField>