force-app/main/default/objects/Campaign/fields/md_npsp_pack__Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Campaign_Code__c</fullName>
    <label>[Deprecated] Campaign Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>