force-app/main/default/objects/Campaign/fields/md_npsp_pack__Campaign_URL__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Campaign_URL__c</fullName>
    <label>Campaign URL</label>
    <type>Url</type>
</CustomField>