force-app/main/default/objects/Campaign/fields/md_npsp_pack__Fundraising_Contact__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Fundraising_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact (Fundraiser)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>FundraisingCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>