force-app/main/default/objects/Campaign/fields/md_npsp_pack__Platform__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Platform__c</fullName>
    <label>[Deprecated] Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>