force-app/main/default/objects/Campaign/fields/md_npsp_pack__Platform_Key__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Platform_Key__c</fullName>
    <externalId>true</externalId>
    <label>[Deprecated] Platform Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>