force-app/main/default/objects/Campaign/fields/md_npsp_pack__Protect_Campaign_Parent__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Protect_Campaign_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[Deprecated] Protect Campaign Parent</label>
    <type>Checkbox</type>
</CustomField>