force-app/main/default/objects/Campaign/fields/md_npsp_pack__Protect_Name__c.field-meta.xml
<CustomField>
    <fullName>md_npsp_pack__Protect_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>[Deprecated] Protect Name</label>
    <type>Checkbox</type>
</CustomField>