force-app/main/default/objects/Campaign/fields/Morning_Tea_Location__c.field-meta.xml
<CustomField>
    <fullName>Morning_Tea_Location__c</fullName>
    <label>Event Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Hospital</fullName>
            </value>
            <value>
                <fullName>In Community</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>