force-app/main/default/objects/Campaign/fields/Number_of_Teens_in_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Teens_in_Attendance__c</fullName>
    <label>Number of Teens in Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>