force-app/main/default/objects/Campaign/fields/Originating_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Originating_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>