force-app/main/default/objects/Campaign/fields/Page_Owner__c.field-meta.xml
<CustomField>
    <fullName>Page_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact who is the owner of the fundraising page</description>
    <inlineHelpText>The contact who is the owner of the fundraising page</inlineHelpText>
    <label>Page Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Page Owner</relationshipLabel>
    <relationshipName>FundraisingCampaign</relationshipName>
    <type>Lookup</type>
</CustomField>