force-app/main/default/objects/Campaign/fields/Page_Owner_State__c.field-meta.xml
<CustomField>
    <fullName>Page_Owner_State__c</fullName>
    <description>Mailing State from Contact linked to this Campaign via Page Owner field</description>
    <formula>Page_Owner__r.MailingState</formula>
    <label>Page Owner State</label>
    <type>Text</type>
</CustomField>