force-app/main/default/objects/Campaign/fields/Post_Created__c.field-meta.xml
<CustomField>
    <fullName>Post_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Created</label>
    <type>Checkbox</type>
</CustomField>