force-app/main/default/objects/Campaign/fields/Post_Updated__c.field-meta.xml
<CustomField>
    <fullName>Post_Updated__c</fullName>
    <label>Post Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>