force-app/main/default/objects/Campaign/fields/Profile_Created__c.field-meta.xml
<CustomField>
    <fullName>Profile_Created__c</fullName>
    <label>Profile Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>