force-app/main/default/objects/Campaign/fields/Profile_Exercise_Total_Updated__c.field-meta.xml
<CustomField>
    <fullName>Profile_Exercise_Total_Updated__c</fullName>
    <label>Profile Exercise Total Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>