force-app/main/default/objects/Campaign/fields/Profile_Total_Updated__c.field-meta.xml
<CustomField>
    <fullName>Profile_Total_Updated__c</fullName>
    <label>Profile Total Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>