force-app/main/default/objects/Campaign/fields/Record_Type_Flag__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Type Flag</label>
    <type>Checkbox</type>
</CustomField>