force-app/main/default/objects/Campaign/fields/Subscription_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Cancelled__c</fullName>
    <label>Subscription Cancelled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>