force-app/main/default/objects/Campaign/fields/Subscription_Created__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription Created</label>
    <type>Checkbox</type>
</CustomField>