force-app/main/default/objects/Campaign/fields/Subscription_Updated__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Updated__c</fullName>
    <label>Subscription Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>