force-app/main/default/objects/Campaign/fields/Total_Amount_Raised_in_Evenico__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Raised_in_Evenico__c</fullName>
    <description>Fundraising page - total amount raised in Evenico</description>
    <inlineHelpText>Fundraising page - total amount raised in Evenico</inlineHelpText>
    <label>Total Amount Raised in Evenico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>