force-app/main/default/objects/Campaign/fields/Total_Registrants__c.field-meta.xml
<CustomField>
    <fullName>Total_Registrants__c</fullName>
    <label>Total Registrants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>