force-app/main/default/objects/Campaign/fields/Total_Value_of_Fundraising_Page__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_of_Fundraising_Page__c</fullName>
    <description>Sum of associated won sponsor donation Opportunities</description>
    <inlineHelpText>Sum of associated won sponsor donation Opportunities</inlineHelpText>
    <label>Total Value of Fundraising Page</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>