force-app/main/default/objects/Campaign/fields/Welcome_Called_Made__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Called_Made__c</fullName>
    <description>This field shows the fundraiser has had a welcome call from the State Fundraising Coordinator</description>
    <inlineHelpText>This field shows the fundraiser has had a welcome call from the State Fundraising Coordinator</inlineHelpText>
    <label>Welcome Call Made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>