force-app/main/default/objects/Campaign/recordTypes/Event_Free.recordType-meta.xml
<RecordType>
    <fullName>Event_Free</fullName>
    <active>true</active>
    <label>Event Free</label>
</RecordType>