force-app/main/default/objects/Campaign/recordTypes/Event_Paid.recordType-meta.xml
<RecordType>
    <fullName>Event_Paid</fullName>
    <active>true</active>
    <label>Event Paid</label>
</RecordType>