force-app/main/default/objects/Campaign/listViews/All_Active_Parent_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Active_Parent_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Is_a_Parent_Campaign__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Is_a_Parent_Campaign__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Parent Campaigns</label>
</ListView>