force-app/main/default/objects/Campaign/listViews/ALL_Campaigns.listView-meta.xml
<ListView>
    <fullName>ALL_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>State__c</columns>
    <columns>Is_a_Parent_Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Campaigns</label>
</ListView>