force-app/main/default/objects/Campaign/listViews/Fundraising_Pages.listView-meta.xml
<ListView>
    <fullName>Fundraising_Pages</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>Page_Owner__c</columns>
    <columns>Page_Owner_State__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Fundraising Page</value>
    </filters>
    <label>Fundraising Pages</label>
</ListView>