force-app/main/default/objects/Campaign/listViews/Two_Feet_Event_Campaigns.listView-meta.xml
<ListView>
    <fullName>Two_Feet_Event_Campaigns</fullName>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>External_System_Link__c</field>
        <operation>contains</operation>
        <value>twofeet</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Default</value>
    </filters>
    <label>Two Feet Event Campaigns</label>
</ListView>